[package]
name = "dalet"
version = "1.0.0-pre8"
edition = "2021"
authors = ["artegoser"]
license = "MIT"
description = "Dalet implementation in Rust"
repository = "https://github.com/txtdot/dalet-rs"
homepage = "https://github.com/TxtDot/dalet-rs/tree/main/"
readme = "./README.md"
keywords = ["dalet"]
categories = ["compression", "compilers", "encoding"]

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
num_enum = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
zstd = "0.13.2"
# chumsky = { version = "=1.0.0-alpha.7", features = ["label"], optional = true }
enum-procs = "0.3.0"

[dev-dependencies]
rmp-serde = { version = "1.3.0" }
bincode = { version = "1.3.3" }
flate2 = "1.0"


[features]
default = ["types", "daletpack", "parsers"]
parsers = ["types"]
types = []
daletpack = ["types"]
