[package]
name = "dalet"
version = "1.0.0-pre.22"
edition = "2021"
authors = ["artegoser"]
license = "MIT"
description = "Dalet implementation in Rust"
repository = "https://github.com/txtdot/dalet-rs"
homepage = "https://github.com/TxtDot/dalet-rs/tree/main/"
readme = "./README.md"
keywords = ["dalet"]
categories = ["compression", "compilers", "encoding"]

[[bin]]
name = "dalet"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
num_enum = "0.7.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_repr = "0.1.20"

enum-procs = "0.3.0"

chumsky = { version = "0.10.0", optional = true }
ariadne = { version = "0.5.1", optional = true }
bitcode = { version = "0.6.6", features = ["serde"], optional = true }
flate2 = { version = "1.0", optional = true }

[features]
default = ["types", "daletpack", "parsers", "daletmark"]
types = []
daletpack = ["types", "dep:bitcode", "dep:flate2"]
parsers = ["types"]
daletmark = ["types", "daletpack", "dep:chumsky", "dep:ariadne"]
